# Red-Nightmare

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  version.txt
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  powerup_request.md
inc/core/: scene.hpp
lib/: CMakeLists.txt
mods/: basegame.lua
mods/basegame/: basegame.lua
mods/basegame/buffs/: charge.lua  charge_rush.lua  chilled.lua  enraged.lua  ignite.lua  sacred_shield_absorb.lua  spell_stolen_from.lua  spell_stolen_to.lua  timed_despawn.lua
mods/basegame/items/: basic_torch.lua  blazing_staff.lua  elemental_circlet.lua  elemental_gear.lua  fiery_hauberk.lua  fire_staff.lua  holy_water_sprinkler.lua  imperial_plate_helm.lua  imperial_plate_platebody.lua  imperial_plate_platelegs.lua  insin.lua  iron_axe.lua  iron_chainlegs.lua  iron_chainmail.lua  iron_coif.lua  iron_mace.lua  iron_sallet.lua  peasant_pants.lua  peasant_shirt.lua  small_iron_shield.lua  steel_greatsword.lua  steel_longsword.lua  white_legion_helm.lua  white_legion_platebody.lua  white_legion_platelegs.lua
mods/basegame/levels/: clans_camp.lua  dev0.lua  devproc0.lua  gardens_of_allergia.lua  startscreen.lua
mods/basegame/prefabs/: allure_of_flame.lua  bipedal.lua  bipedal_human.lua  bipedal_maker.lua  bipedal_ogre.lua  bipedal_skeleton.lua  boss_pyr.lua  cast_buildup.lua  combat_stats.lua  consecration_effect.lua  dirt_path.lua  elemental.lua  enemy_ai.lua  faction.lua  floating_combat_text.lua  health_bar.lua  invisible_wall.lua  keyboard_controlled.lua  light_emitter.lua  loot_chest.lua  loot_drop.lua  magic_barrier.lua  magicbolt.lua  melee_monster.lua  melee_swing_area.lua  mouse_controlled.lua  obstacle.lua  portal.lua  skeleton.lua  spell_drop.lua  spell_slots.lua  spellsteal_projectile.lua  sprite.lua  sticky.lua  text.lua  timed_despawn.lua  wall.lua  zombie.lua
mods/basegame/spells/: allure_of_flames.lua  charge.lua  consecrate.lua  cruel_lie.lua  deadly_throw.lua  enrage.lua  equivocation.lua  firestorm.lua  flash_of_light.lua  harsh_truth.lua  icicle.lua  lesser_firebolt.lua  lesser_frostbolt.lua  lesser_magicbolt.lua  melee.lua  sacred_shield.lua  savage_kick.lua  spellsteal.lua  summon_zombie.lua  zombie_devour.lua  zombie_swipe.lua
mods/basegame2/: basegame2.lua
mods/basegame2/levels/: empty.lua  startscreen2.lua
mods/basegame2/prefabs/: model_humanoid.lua  model_quad.lua  player.lua  quad.lua
res/models/: human_animated_textured.glb  plane.glb
res/shaders/: base.fragment.glsl  base.vertex.glsl
src/: action.cpp  action.hpp  action.inl  actor.cpp  actor.hpp  animated_texture.cpp  animated_texture.hpp  animated_texture.inl  animation.cpp  animation.hpp  asteroid.cpp  asteroid.hpp  audio_manager.cpp  audio_manager.hpp  box.cpp  box.hpp  bullet.cpp  bullet.hpp  cursor.cpp  cursor.hpp  effect.cpp  effect.hpp  entity.cpp  entity.hpp  entity.inl  entity_manager.cpp  entity_manager.hpp  entity_spawner.cpp  entity_spawner.hpp  event.hpp  faction.hpp  fireball.cpp  fireball.hpp  flag.hpp  game.cpp  game.hpp  game_sprite.cpp  game_sprite.hpp  ghost.cpp  ghost.hpp  (+31 more)
src/actors/: BossBanshee.actor  ChaoticFireball.actor  FireExplosion.actor  FireSmoke.actor  Fireball_Spawner.actor  Frostbolt.actor  FrozenOrb.actor  GhostBanshee.actor  GhostBanshee_Spirit.actor  GhostZombie.actor  GhostZombie_Spawner.actor  Interactable_Frost_Torch.actor  Interactable_Stone_Stairs_Down_NX.actor  Interactable_Stone_Stairs_Down_PY.actor  Interactable_Stone_Stairs_Up_NX.actor  Interactable_Torch.actor  Nightmare.actor  PlayerAkhara.actor  Wall.actor
src/core/: action.cpp  action.hpp  action.inl  actor.cpp  actor.hpp  box.cpp  box.hpp  event.hpp  flag.hpp  level.cpp  level.hpp  quadtree.cpp  quadtree.hpp  quadtree.inl  scene.cpp  scene.hpp  util.cpp  util.hpp  zone.cpp  zone.hpp
src/dui/: player_manager_window.cpp  player_manager_window.hpp  sprite_manager_window.cpp  sprite_manager_window.hpp
src/effects/: empty.fragment.tzsl  empty.vertex.tzsl  light.fragment.tzsl  light.tzsl  rain.fragment.tzsl  snow.fragment.tzsl
src/enemies/: ghost.cpp  ghost.hpp  nightmare.cpp  nightmare.hpp
src/game/: main.cpp
src/gamelib/: audio.cpp  audio.hpp  config.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  rnlib.cpp  rnlib.hpp  scene.cpp  scene.dbgui.cpp  scene.hpp  version.cpp  version.hpp
src/gamelib/core/: box.cpp  box.hpp  entity.cpp  entity.hpp  entity.inl  mount.hpp  quadtree.cpp  quadtree.hpp  quadtree.inl  transform.cpp  transform.hpp
src/gamelib/entity/: api.cpp  api.hpp  entity.lua  scene.cpp  scene.hpp
src/gamelib/gameplay/: actor.cpp  actor.hpp
src/gamelib/input/: kbm.cpp  kbm.hpp  keyboard.cpp  keyboard.hpp
src/gamelib/logic/: stats.cpp  stats.hpp
src/gamelib/lua/: ability.lua  buff.lua  combat.lua  director.lua  entity.lua  equipment.lua  game.lua  item.lua  level.lua  meta.cpp  meta.hpp  mod.lua  player.lua  spell.lua  util.lua
src/gamelib/messaging/: scene.cpp  scene.hpp  system.hpp
src/gamelib/physics/: aabb.cpp  aabb.hpp  grid_hierarchy.cpp  grid_hierarchy.hpp  quadtree.cpp  quadtree.hpp  quadtree.inl
src/gamelib/render/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  font.cpp  font.hpp  image.cpp  image.hpp  quad_renderer.cpp  quad_renderer.hpp  scene_renderer.cpp  scene_renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/gamelib/renderer/: scene_renderer.cpp  scene_renderer.hpp  texture_manager.cpp  texture_manager.hpp
src/gameplay/actors/: BloodSplatter.actor  BossBanshee.actor  CollectablePowerup_Sprint.actor  FireExplosion.actor  Frostbolt.actor  FrozenOrb.actor  GhostBanshee_Skittish.actor  GhostBanshee_Spirit.actor  Interactable_Stone_Stairs_Up_PY.actor  InvisibleWall.actor  InvisibleWallProjectilePass.actor  PlayerAkhara.actor  RoadSpeedBoost.actor  Scenery_Gravestone.actor  WallDestructible.actor
src/gfx/: animation.cpp  animation.hpp  backdrop.hpp  effect.cpp  effect.hpp  light.hpp  quad.fragment.tzsl  quad_renderer.cpp  quad_renderer.hpp
src/orbs/: blackball.cpp  blackball.hpp  fireball.cpp  fireball.hpp  frostball.cpp  frostball.hpp
(+154 files in other folders)
